--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: objective-c
 
 before_install:
   - brew update
+  - brew unlink xctool
   - brew install xctool
   - gem install cocoapods -v 0.29.0 --no-ri --no-doc
 
