--- a/MotioSDK/MotioSDK.xcodeproj/xcshareddata/xcschemes/MotioSDK.xcscheme
+++ b/MotioSDK/MotioSDK.xcodeproj/xcshareddata/xcschemes/MotioSDK.xcscheme
@@ -20,6 +20,20 @@
                ReferencedContainer = "container:MotioSDK.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "5A4DF696C639486892B53190"
+               BuildableName = "libPods.a"
+               BlueprintName = "Pods"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
